# enso

./: .atomignore  .base-docker-image-tag  .bazelignore  .bazelrc  .drone.sec  .drone.yml  .envrc  .eslintignore  .eslintrc.cjs  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .ignore  .jvmopts  .pnpmfile.cjs  .prettierignore  .prettierrc.json  .prettierrc.yaml  .rustfmt.toml  .scalafmt.conf  .stylish-haskell.yaml  BUILD.bazel  CHANGELOG-2021.md  CHANGELOG-2024_1.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LoadParser.java  LoadParser.sh  MODULE.bazel  Main.enso  README.md  RELEASES.md  Setup.lhs  TODO.txt  (+60 more)
app/common/: BUILD.bazel  package.json  tsconfig.json
app/common/src/: accessToken.ts  appConfig.d.ts  appConfig.js  appConfig.ts  backendQuery.ts  buildUtils.d.ts  buildUtils.js  config.ts  detect.ts  gtag.ts  index.d.ts  index.ts  load.ts  queryClient.ts  text.ts
app/dashboard/: .prettierignore  .prettierrc.cjs  .prettierrc.json  404.html  BUILD.bazel  README.md  index.html  package.json  playwright.config.ts  tailwind.config.d.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vite.test.config.ts  vitest.config.ts
app/dashboard/e2e/: README.md  actions.ts  api.ts  assetPanel.spec.ts  assetSearchBar.spec.ts  assetsTableFeatures.spec.ts  authPreserveEmail.spec.ts  copy.spec.ts  createAsset.spec.ts  dataLinkEditor.spec.ts  delete.spec.ts  driveView.spec.ts  editAssetName.spec.ts  labels.spec.ts  labelsPanel.spec.ts  latestGithubReleases.json  loginLogout.spec.ts  loginScreen.spec.ts  organizationSettings.spec.ts  pageSwitcher.spec.ts  setup.spec.ts  signUp.spec.ts  sort.spec.ts  startModal.spec.ts  userMenu.spec.ts  userSettings.spec.ts
app/dashboard/src/: App.tsx  ReactQueryDevtools.tsx  TestAppRunner.tsx  appUtils.tsx  entrypoint.ts  globals.d.ts  index.tsx  tailwind.css
app/gui/: .env  .env.bazel  .env.local.example  .env.testing  .gitignore  BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md  config.yaml  env.d.ts  index.html  lib0-ext.d.ts  package.json  playwright.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.app.vitest.json  tsconfig.e2e.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.test.config.ts  vitest.config.ts
app/gui/analytics/: Cargo.toml
app/gui/config/: Cargo.toml  build.rs
app/gui/controller/: Cargo.toml
app/gui/docs/: CHANGELOG_TEMPLATE.md  CONTRIBUTING.md  README.md
app/gui/enso-profiler-enso-data/: Cargo.toml
app/gui/enso-profiler-metadata/: Cargo.toml
app/gui/profiler-data-tools/: Cargo.toml
app/gui/project-manager-shim-middleware/: desktopEnvironment.ts  index.ts  projectManagement.ts
app/gui/scripts/: downloadFonts.js  downloadFonts.mjs  envReplacer.mjs  generateIconMetadata.js  generateIconMetadata.mjs
app/gui/src/: config.rs  config.ts  constants.rs  controller.rs  documentation_debug_scene.rs  entrypoint.ts  executor.rs  ide.rs  integration_test.rs  lib.rs  local_profiler.rs  model.rs  notification.rs  presenter.rs  profile_workflow.rs  retry.rs  searcher.rs  sync.rs  test.rs  tests.rs  (+1 more)
app/gui2/: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.json  .snyk  BUILD.bazel  README.md  arch.md  config.yaml  digraph.dot  env.d.ts  env.story.d.ts  eslint.config.js  gui2.1.md  histoire.config.ts  index.html  node.env.d.ts  node.globals.d.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.js  projectManagement.ts  projectManagerShimMiddleware.ts  shortcuts.md  tsconfig.app.json  tsconfig.app.vitest.json  tsconfig.json  tsconfig.node.json  tsconfig.scripts.json  tsconfig.server.json  tsconfig.server.vitest.json  tsconfig.story.json  tsconfig.vitest.json  vite.config.ts  vite.watch.config.ts  vite.ydoc-server-polyglot.config.ts  vite.ydoc-server.config.ts  vitest.config.ts  vitest.config.ts.timestamp-1713474038326-2a1f5c7499583.mjs  (+2 more)
app/rust-ffi/: BUILD.bazel  Cargo.toml  package.json
app/ydoc-server/: BUILD.bazel  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
app/ydoc-server-nodejs/: BUILD.bazel  build.mjs  package.json  tsconfig.json
app/ydoc-shared/: BUILD.bazel  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
build_tools/install/: Cargo.toml  build.rs
gui/: .gitignore  .prettierignore  .prettierrc.toml  .rustfmt.toml  CHANGELOG.md  CURRENT_RELEASE_CHANGELOG.json  Cargo.toml  LICENSE  README.md  SECURITY.md  config.json  run  rust-toolchain  rustfmt.toml
gui/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
gui/app/: .gitignore  lerna.json  package.json  webpack.config.js
gui/build-utilities/: Cargo.toml
gui/docs/: CONTRIBUTING.md  README.md  contributing.md  enso-protocol.md  repository-structure.md  shortcuts.md  style-guide.md
gui/examples/: package.json  webpack.common.js  webpack.config.js  webpack.dev.js
gui/script/: assert_max_wasm_size.sh  build.sh  lint.sh  minimize_wasm.sh  test.sh  watch.sh
gui/src/: config.yaml
ide/: .gitignore  .prettierignore  .prettierrc.yaml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  build.sh  config.json  package-lock.json  run  rust-toolchain
ide/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
ide/app/: package-lock.json  package.json
ide/build-utilities/: Cargo.toml
ide/docs/: CHANGELOG_TEMPLATE.md  CONTRIBUTING.md  README.md  contributing.md  repository-structure.md  style-guide.md
ide/examples/: index.html  index.js  package-lock.json  package.json  webpack.common.js  webpack.prod.js
ide/gui/: .gitignore  .rustfmt.toml  Cargo.toml  README.md
ide/script/: assert_max_wasm_size.sh  build.sh  lint.sh  minimize_wasm.sh  test.sh  watch.sh
ide/src/: config.yaml
integration-test/: Cargo.toml  webdriver.json
integration-test/src/: lib.rs
integration-test/tests/: engine.rs  graph_editor.rs
parser/flexer/: Cargo.toml
toolchains/: BUILD.bazel
toolchains/dummy_cc/: BUILD.bazel  dummy_cc_toolchain.bzl
toolchains/wasm_bindgen/: BUILD.bazel  BUILD.wasm-bindgen-cli.bazel
tools/http-test-helper/: BUILD.bazel  README.md
tools/wstest/: Cargo.toml  README.md
(+20111 files in other folders)
