load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@npm//:defs.bzl", "npm_link_all_packages")
npm_link_all_packages()

write_source_files(
    name = "write_all",
    additional_update_targets = [
        "//app/rust-ffi:write_wasm_dist",
        "//app/ydoc-shared:write_ast_codegen",
    ]
)
