name:                data-rtuple
version:             1.0
synopsis:            Recursive tuple data structure. It is very usefull when implementing some lo-level operations, allowing to traverse different elements using Haskell's type classes.
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Wojciech Danilo
maintainer:          Wojciech Danilo <wojciech.danilo@gmail.com>
stability:           experimental
homepage:            https://github.com/wdanilo/rtuple
bug-reports:         https://github.com/wdanilo/rtuple/issues
copyright:           Copyright (C) 2014 Wojciech Danilo
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


Library
  hs-source-dirs:     src
  ghc-options:        -Wall -O2
  default-language:   Haskell2010

  default-extensions: ConstraintKinds
                      DataKinds
                      DefaultSignatures
                      DeriveDataTypeable
                      DeriveFoldable
                      DeriveFunctor
                      DeriveGeneric
                      DeriveTraversable
                      DoAndIfThenElse
                      EmptyDataDecls
                      FlexibleContexts
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      InstanceSigs
                      LambdaCase
                      MultiParamTypeClasses
                      OverloadedStrings
                      StandaloneDeriving
                      TemplateHaskell
                      TupleSections
                      TypeOperators
                      ViewPatterns
                      TypeFamilies
  
  exposed-modules:    Data.RTuple

  build-depends:      base >=4.6 && <4.9
                    , typelevel
                    , lens
